css/about.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Roboto', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-size: 18px;
    margin-bottom: 15px;
    font-family: 'Rubik', sans-serif;
}

p {
    line-height: 1.4;
}

.container {
    width: 800px;
    margin: 0 auto;
}
.logimg{
    object-fit: fill;
    padding-bottom:2rem;
  }
header nav {
    width: 60%;
    display: flex;
    justify-content: space-between;
    align-items: baseline; /*center*/
    /*padding: 2rem 2%; */
    padding:1rem 1rem;
    font-size:1.1rem;
   /* margin-left: 0rem;*/
  }
  
  header nav a {
    color: black;
    text-decoration: none;
    padding:8%;
    padding-bottom:2%;
    
  }

 .aboutimg{
     width:100%;
     height:25rem;
 } 

 .containeraboutpage{
   display:flex;
   flex-wrap: wrap;
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   border-bottom: 1px dashed black;
 }
 button{
   border-radius: 1rem;
   padding:0.5rem;
   margin-top:2rem;
   width:8rem;
 }
 .container1 {
   display:flex;
   flex-wrap: wrap;
   justify-content: space-between;
    align-items:center;
    align-content: space-around;
   border-bottom: 1px dashed black;
   padding : 2%;
  }

  .container2 {
    display:flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items:space-between;
    align-content: space-around;
    border-bottom: 1px dashed black;
    padding : 1%;
   }
 
.container1 div{
  width: 40%;
  padding:2% 2%;
  margin-left: 1rem;
  
} 
.container2 div{
  width: 40%;
  padding:0% 1%;
  margin-left: 1rem;
  
}

h2{
  padding-top:0.5rem;
}
.theend{
  display:flex;
  margin-top:2.5rem;
  margin-bottom:2.5rem;
}

footer {
    width: 100%;
    background: black;
}

footer nav {
    width: 60%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 2%;
    font-size: 14px;
}

footer nav a {
    color: white;
    text-decoration: none;
}

